--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -12,6 +12,7 @@ cmds = [
     'npm run build',
     'php artisan optimize:clear',
     'php artisan migrate --force --seed',
+    'php artisan migrate:fresh --force --seed',
     'php artisan config:cache',
     'php artisan route:cache', 
     'php artisan view:cache',
